--- a/test.yml
+++ b/test.yml
@@ -1,22 +1,29 @@
-RequestHeaders:
-  type: object
-  required:
-    - version
-    - requester
-    - timestamp
-  properties:
-    token:
-      type: string
-      description: Jasd
-    ip:
-      type: string
-      description: asd
-    version:
-      type: string
-      description: asd
-    requester:
-      type: string
-      description: asd
-    timestamp:
-      type: integer
-      description: asd
+swagger: '3.0'
+info:
+  title: asd
+  version: "1.0.0"
+host: asd
+paths: {}
+definitions:
+  RequestHeaders:
+    type: object
+    required:
+      - version
+      - requester
+      - timestamp
+    properties:
+      token:
+        type: string
+        description: Jasd
+      ip:
+        type: string
+        description: asd
+      version:
+        type: string
+        description: asd
+      requester:
+        type: string
+        description: asd
+      timestamp:
+        type: integer
+        description: asd
